--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -41,6 +41,8 @@ $dark:          $gray-800 !default;
 //For example:./img/your-image.png 
 $bgHome : "./img/bg-masthead.jpg";
 
+// Graph tooltip title color 
+$graphTooltipTitleColor: $info;
 
 // Links
 //
