Change csv and css url's and add cname

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
-  <link rel="stylesheet" href="https://projectpoder.github.io/VivirConVIH_landing/assets/main.css">
+  <link rel="stylesheet" href="https://landing.vivirconvih.org/assets/main.css">
   <link rel="shortcut icon" type="image/png" href="/favicon.png">
   <link rel="stylesheet" href="{{ "/assets/javascript/fullpage.js/dist/jquery.fullpage.min.css" | relative_url }}">
   {%- feed_meta -%}
