--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,11 +7,13 @@
   <link rel="shortcut icon" type="image/png" href="/favicon.png">
   <link rel="stylesheet" href="{{ "/assets/javascript/fullpage.js/dist/jquery.fullpage.min.css" | relative_url }}">
   {%- feed_meta -%}
-  <script src="{{ "/assets/javascript/bootstrap/jquery.min.js" | relative_url }}"></script>
-  <script src="{{ "/assets/javascript/bootstrap/bootstrap.bundle.min.js" | relative_url }}"></script>
-  <script src="{{ "/assets/javascript/fullpage.js/dist/jquery.fullpage.js" | relative_url }}"></script>
-  <script src="{{ "/assets/javascript/d3/d3.js" | relative_url }}"></script>
-  <script src="{{ "/assets/javascript/main.js" | relative_url }}"></script>
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700,800|Quicksand:300,400,500,700" rel="stylesheet" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap" rel="stylesheet">
+  <script src="{{ "/assets/javascript/bootstrap/jquery.min.js" | absolute_url }}"></script>
+  <script src="{{ "/assets/javascript/bootstrap/bootstrap.bundle.min.js" | absolute_url }}"></script>
+  <script src="{{ "/assets/javascript/fullpage.js/dist/jquery.fullpage.js" | absolute_url }}"></script>
+  <script src="{{ "/assets/javascript/d3/d3.js" | absolute_url }}"></script>
+  <script src="{{ "/assets/javascript/main.js" | absolute_url }}"></script>
   <script>
     window.graphConfig = {{ site.graph | jsonify }};
   </script>
