--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
         <article>
 
           <header>
-            <h1>{{ page.title | escape }}</h1>
+            <h1 class="text-center" style="color:#cb2c30">{{ page.title | escape }}</h1>
             <p class="text-muted">
               <time datetime="{{ page.date | date_to_xmlschema }}">
                 {% include translated_date.html date=page.date format=site.date-format lang=site.date-language %}
