--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -22,7 +22,7 @@ layout: default
                   {% include translated_date.html date=post.date format=site.date-format lang=site.date-language  %}
                 </span>
                 {%- if post.author -%}
-                <p><b>Published by {{ post.author }}</b></p>
+                <p><b>Por {{ post.author }}</b></p>
                 {%- endif -%}
               </div>
             </div>
@@ -34,7 +34,7 @@ layout: default
       </div>
       {%- endfor -%}
       <div class="col-lg-12">
-        <p class="rss-subscribe mt-4">Subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+        <p class="rss-subscribe mt-4">Suscríbete <a href="{{ "/feed.xml" | relative_url }}">vía RSS</a></p>
       </div>
       {%- endif -%}
     </div>
