Add complement bg

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,9 @@
 
   {%- include head.html -%}
 
-  <body>
+  <!-- {%- assign my_page = site.pages | where: "path", path | first -%} -->
+  <body class="{% if page.title == "Inicio" %}{%- else -%}complement-bg{% endif %}">
+
     {%- include header.html -%}
 
       {{ content }}
