--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
               </li>
             {%- endif -%}
           {%- endfor -%}
-          <li class="nav-item"><a class="nav-link" href="https://vivirconvih.org/">VivirConVIH Améria Latina</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://vivirconvih.org/">América Latina</a></li>
           <li class="nav-item"><a class="nav-link" href="https://bolivia.vivirconvih.org/">Bolivia</a></li>
           <li class="nav-item"><a class="nav-link" href="https://costarica.vivirconvih.org/">Costa Rica</a></li>
           <li class="nav-item"><a class="nav-link" href="https://ecuador.vivirconvih.org/">Ecuador</a></li>
@@ -56,7 +56,7 @@
             </li>
             {%- endif -%}
             {%- endfor -%}
-            <li class="nav-item"><a class="nav-link" href="https://vivirconvih.org/">VivirConVIH América Latina</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://vivirconvih.org/">América Latina</a></li>
             <li class="nav-item"><a class="nav-link" href="https://bolivia.vivirconvih.org/">Bolivia</a></li>
             <li class="nav-item"><a class="nav-link" href="https://costarica.vivirconvih.org/">Costa Rica</a></li>
             <li class="nav-item"><a class="nav-link" href="https://ecuador.vivirconvih.org/">Ecuador</a></li>
