--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,4 +17,13 @@
   <script>
     window.graphConfig = {{ site.graph | jsonify }};
   </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130129701-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    
+    gtag('config', 'UA-130129701-1');
+  </script>
 </head>
