--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <section class="main-content text-center">
   <div class="container d-flex flex-wrap h-100 align-items-center justify-content-center">
-    <div style="margin-top: 44rem; margin-bottom: 7rem;" class="row w-100 bg-blue rounded bg-padding">
+    <div class="row w-100 bg-blue rounded bg-padding bg-padding1">
       <div class="col-lg-12">
         {{ content }}
       </div>
