--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
+  <meta property="og:title" content="VivirConVIH Guatemala">
+  <meta property="og:image" content="https://vivirconvih.org/assets/img/GUATEMALA.jpg"/>
+  <!-- Twitter card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="VivirConVIH Guatemala">
+  <meta name="twitter:text:title" content="VivirConVIH Guatemala">
+  <meta name="twitter:description" content="Aunque el 43,89% de su población es indígena, el país no tiene una estrategia nacional de respuesta al VIH dirigida a los pueblos originarios y que considere la atención en idiomas maternos.">
+  <meta name="twitter:image" content="https://vivirconvih.org/assets/img/GUATEMALA.jpg">
+  <meta name="twitter:url" contnet="https://guatemala.vivirconvih.org/">
+
   <link rel="stylesheet" href="https://vivirconvih.org/assets/main.css">
   <link rel="shortcut icon" type="image/png" href="/favicon.png">
   <link rel="stylesheet" href="{{ "/assets/javascript/fullpage.js/dist/jquery.fullpage.min.css" | relative_url }}">
